Finished the FEM course

--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Day</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles/index.css">
+  <title>CSS Day</title>
 </head>
-<body>
-    <header>
-        <a href="/">CSS Day</a>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="speakers.html">Speakers</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <img src="./icons/shopping-cart.svg" alt="Shopping cart">
-        </div>
-    </header>
-    <main>
-        <p>CSS Day is a conference for developers who love beautiful websites.</p>
-        <p>4-8 June 2023</p>
-        <button>Buy Tickets <img src="./icons/arrow-right.svg" alt="Right arrow"></button>
-    </main>
+
+<body class="body body--primary home">
+  <header class="header">
+    <svg class="menu" width="33" height="36" viewBox="0 0 33 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path
+        d="M0 4.5C0 3.67031 0.670312 3 1.5 3H19.5C20.3297 3 21 3.67031 21 4.5C21 5.32969 20.3297 6 19.5 6H1.5C0.670312 6 0 5.32969 0 4.5ZM0 12C0 11.1703 0.670312 10.5 1.5 10.5H19.5C20.3297 10.5 21 11.1703 21 12C21 12.8297 20.3297 13.5 19.5 13.5H1.5C0.670312 13.5 0 12.8297 0 12ZM21 19.5C21 20.3297 20.3297 21 19.5 21H1.5C0.670312 21 0 20.3297 0 19.5C0 18.6703 0.670312 18 1.5 18H19.5C20.3297 18 21 18.6703 21 19.5Z"
+        fill="#FF7B54" />
+    </svg>
+
+    <a class="header__link" href="/">CSS Day</a>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__list-item"><a href="#">About</a></li>
+        <li class="nav__list-item"><a href="speakers.html">Speakers</a></li>
+        <li class="nav__list-item"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <img src="./assets/icons/shopping-cart.svg" alt="Shopping cart" />
+  </header>
+  <main class="main">
+    <p class="main__heading">CSS Day is a conference for developers who love beautiful websites.</p>
+    <p class="main__sub-heading">4-8 June 2023</p>
+    <div class="button-container">
+      <button class="button button--primary">
+        Buy Tickets <img src="./assets/icons/arrow-right.svg" alt="Right arrow" class="button__icon" />
+      </button>
+      <button class="button button--secondary">Contact Us</button>
+    </div>
+  </main>
 </body>
+
 </html>
